corrected spacing and styling mismatches to index and css files

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ img {
   overflow: clip;
 }
 
+h1 {
+  padding: 10px 0;
+  margin-bottom: 20px;
+  font-size: 2.5rem;
+}
 
 .container {
   width: 100%;
@@ -49,20 +54,10 @@ img {
 
 .palindrome-box label {
   color: black;
+  margin-bottom: 20px;
 }
 
-.definition-div {
-  width: min(100vw, 450px);
-  font-size: 1.3rem;
-  min-height: 140px;
-  background-color: #00471b;
-  margin-top: 20px;
-  padding: 20px;
-  border-radius: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 
 input {
   height: 30px;
@@ -82,4 +77,17 @@ input {
   background-color: #5a01a7;
   color: #fff;
   cursor: pointer;
+}
+
+.definition-div {
+  width: min(100vw, 450px);
+  font-size: 1.3rem;
+  min-height: 140px;
+  background-color: #00471b;
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
